Code Block Wrap Fix v2

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -164,7 +164,7 @@ header {
                 color: $mainTextColor;
             }
 
-            .pre {
+            pre {
                 white-space: normal;
             }
 
